# workflow

./: .config  .gitignore  Dockerfile  README.md  llm_orchax.db  pyproject.toml  run_app.py
src/: application.py  commands.py  create_app.py
src/blueprints/: __init__.py  bg_task.py  process.py  uploads.py
src/configs/: __init__.py  app_conf.py  database_conf.py  deployment_conf.py  log_conf.py  uploads_conf.py
src/configs/feature/: __init__.py  uploads_conf.py
src/database/: __init__.py  base.py
src/database/models/: __init__.py  account.py  dataset.py  document.py  messages.py  uploads.py
src/service/: account_service.py
src/set_up/: primary_setup.py  secondary_setup.py
tests/: test_db_extn.py
